JumpScript/tests/baselines/reference/yieldStringLiteral.errors.txt
tests/cases/compiler/yieldStringLiteral.jump(2,5): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/compiler/yieldStringLiteral.jump (1 errors) ====
    function yieldString() {
        yield 'literal';
        ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
    }
    